# dymension_expander

./: .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs
src/logics/: delay.rs  gain_dynamics.rs  mod.rs  peak_level_detector.rs
src/parameters/: helpers.rs  mod.rs
src/view/: loader.rs  mod.rs  style.css
view/: package-lock.json  package.json  webpack.config.js
view/public/: index.html
view/src/: App.vue  index.js
view/src/components/: Mater.vue  Slider.vue
